[package]
name = "zvm-helper"
repository = "https://github.com/nikita-dubrovskii/zvm-helper"
license = "Apache-2.0"
edition = "2018"
authors = ["Nikita Dubrovskii <nikita@linux.ibm.com>"]
description = "zVM installation helper for Fedora CoreOS and RedHat CoreOS"
version = "0.1.2"

[dependencies]
anyhow = "^1.0.41"
chrono = "^0.4"
clap = { version = ">= 3.1, < 4", default-features = false, features = ["std", "cargo", "derive", "suggestions", "wrap_help"] }
reqwest = { version = ">= 0.10, < 0.12", features = ["blocking"] }

